--- a/SMS.Web/Views/GoOut/Create.cshtml
+++ b/SMS.Web/Views/GoOut/Create.cshtml
@@ -129,7 +129,7 @@
                     <!--Ảnh profile-->
                     <div class="form-group col-12 profile-img">
                         <div class="img-profile">
-                            <img src="~/Assets/img/the-world.jpg" />
+                            <img id="img-profile" src="~/Assets/img/the-world.jpg" />
                         </div>
                     </div>
                     <!--Thông tin profile-->
