--- a/SMS.Web/Views/Shared/_Layout.cshtml
+++ b/SMS.Web/Views/Shared/_Layout.cshtml
@@ -121,7 +121,7 @@
                         </a>
                         <div id="collapseReport" class="collapse" aria-labelledby="headingTwo" data-parent="#collapseInOut">
                             <div class="bg-sub-menu py-2 collapse-inner rounded">
-                                <a id="LEReport" class="collapse-item grey-a-tag" href="~/Reports/leave_early/ReportLE.rdlc">CNV về sớm</a>
+                                <a id="LEReport" class="collapse-item grey-a-tag" href="~/Reports/leave_early/ReportLE.aspx">CNV về sớm</a>
                                 <a id="GOReport" class="collapse-item grey-a-tag" href="#">CNV ra ngoài</a>
                                 <a id="BIReport" class="collapse-item grey-a-tag" href="#">CNV mang hàng vào</a>
                                 <a id="BOReport" class="collapse-item grey-a-tag" href="#">CNV mang hàng ra</a>
