--- a/SMS.Web/Views/BringOut/FSTApproveDetail.cshtml
+++ b/SMS.Web/Views/BringOut/FSTApproveDetail.cshtml
@@ -54,7 +54,7 @@
             <!--Ảnh profile-->
             <div class="form-group col-12 profile-img">
                 <div class="img-profile">
-                    <img src="~/Assets/img/the-world.jpg" />
+                    <img id="img-profile" src="~/Assets/img/the-world.jpg" />
                 </div>
             </div>
             <!--Thông tin profile-->
@@ -163,6 +163,7 @@
 </div>
 @section scripts{
     <script src="~/Assets/js/jquery-confirm.js"></script>
+    <script src="~/Assets/js/bring_out/common.js"></script>
     <script>
         $('#return-approve').on("click", () => {
             window.location.href = "/BringOut/FSTApprove"
